# useful_stuff

./: .gitignore  main.py  pyproject.toml
python_scripts/scripts/: imgANN_dev.ipynb  permutations_dev.ipynb  read_video_dev.ipynb  regress_out_dev.ipynb  regress_out_pcr.ipynb  regression_oop_dev.ipynb  useful_stuff_initial_dev.ipynb
python_scripts/src/general_utils/: CKA.py  II.py  RSA.py  __init__.py  dRSA.py  plots.py  regression.py  static_dRSA.py  utils.py
python_scripts/src/useful_stuff/general_utils/: II.py  RSA.py  __init__.py  plots.py  regression.py  statistical_inference.py  utils.py
python_scripts/src/useful_stuff/image_processing/: __init__.py  computational_models.py  dim_redu.py  utils.py
python_scripts/src/useful_stuff/parallel/: __init__.py  parallel_funcs.py
